@@ -441,30 +441,30 @@ array(
     'orders_products_attributes' => array(
         'orderProductAttributeId' => 'column=orders_products_attributes_id;type=integer;key=true;auto=true',
         'orderId' => 'column=orders_id;type=integer',
-        'orderProductId' => 'column=orders_products_id;type=integer',
-        'products_options' => 'column=products_options;type=string',
-        'products_options_values' => 'column=products_options_values;type=string',
-        'options_values_price' => 'column=options_values_price;type=float',
-        'price_prefix' => 'column=price_prefix;type=string',
-        'product_attribute_is_free' => 'column=product_attribute_is_free;type=integer',
-        'products_attributes_weight' => 'column=products_attributes_weight;type=float',
-        'products_attributes_weight_prefix' => 'column=products_attributes_weight_prefix;type=string',
-        'attributes_discounted' => 'column=attributes_discounted;type=integer',
-        'attributes_price_base_included' => 'column=attributes_price_base_included;type=integer',
-        'attributes_price_onetime' => 'column=attributes_price_onetime;type=float',
-        'attributes_price_factor' => 'column=attributes_price_factor;type=float',
-        'attributes_price_factor_offset' => 'column=attributes_price_factor_offset;type=float',
-        'attributes_price_factor_onetime' => 'column=attributes_price_factor_onetime;type=float',
+        'orderItemId' => 'column=orders_products_id;type=integer',
+        'attributeName' => 'column=products_options;type=string',
+        'name' => 'column=products_options_values;type=string',
+        'valuePrice' => 'column=options_values_price;type=float',
+        'pricePrefix' => 'column=price_prefix;type=string',
+        'free' => 'column=product_attribute_is_free;type=integer',
+        'weight' => 'column=products_attributes_weight;type=float',
+        'weightPrefix' => 'column=products_attributes_weight_prefix;type=string',
+        'discounted' => 'column=attributes_discounted;type=integer',
+        'includeInBasePrice' => 'column=attributes_price_base_included;type=integer',
+        'oneTimePrice' => 'column=attributes_price_onetime;type=float',
+        'priceFactor' => 'column=attributes_price_factor;type=float',
+        'priceFactorOffset' => 'column=attributes_price_factor_offset;type=float',
+        'priceFactorOneTime' => 'column=attributes_price_factor_onetime;type=float',
         'attributes_price_factor_onetime_offset' => 'column=attributes_price_factor_onetime_offset;type=float',
         'attributes_qty_prices' => 'column=attributes_qty_prices;type=string',
-        'attributes_qty_prices_onetime' => 'column=attributes_qty_prices_onetime;type=string',
-        'attributes_price_words' => 'column=attributes_price_words;type=float',
-        'attributes_price_words_free' => 'column=attributes_price_words_free;type=integer',
-        'attributes_price_letters' => 'column=attributes_price_letters;type=float',
-        'attributes_price_letters_free' => 'column=attributes_price_letters_free;type=integer',
-        'products_options_id' => 'column=products_options_id;type=integer',
-        'products_options_values_id' => 'column=products_options_values_id;type=integer',
-        'products_prid' => 'column=products_prid;type=string',
+        'priceFactorOneTimeOffset' => 'column=attributes_qty_prices_onetime;type=string',
+        //'priceWords' => 'column=attributes_price_words;type=float',
+        //'priceWordsFree' => 'column=attributes_price_words_free;type=integer',
+        //'priceLetters' => 'column=attributes_price_letters;type=float',
+        //'priceLettersFree' => 'column=attributes_price_letters_free;type=integer',
+        'attributeId' => 'column=products_options_id;type=integer',
+        'attributeValueId' => 'column=products_options_values_id;type=integer',
+        'sku' => 'column=products_prid;type=string',
     ),
     'orders_total' => array(
         'orderTotalId' => 'column=orders_total_id;type=integer;key=true;auto=true',
@@ -498,16 +498,16 @@ array(
         'released' => 'column=release_flag;type=string',
     ),
     'orders_products' => array(
-        'orderProductId' => 'column=orders_products_id;type=integer;key=true;auto=true',
+        'orderItemId' => 'column=orders_products_id;type=integer;key=true;auto=true',
         'orderId' => 'column=orders_id;type=integer',
         'productId' => 'column=products_id;type=integer',
         'model' => 'column=products_model;type=string',
         'name' => 'column=products_name;type=string',
         'productPrice' => 'column=products_price;type=float',
         'finalPrice' => 'column=final_price;type=float',
-        'tax' => 'column=products_tax;type=float',
-        'quantity' => 'column=products_quantity;type=float',
-        'onetimeCharges' => 'column=onetime_charges;type=integer',
+        'taxValue' => 'column=products_tax;type=float',
+        'qty' => 'column=products_quantity;type=float',
+        'oneTimeCharges' => 'column=onetime_charges;type=integer',
         'pricedByAttribute' => 'column=products_priced_by_attribute;type=integer',
         'free' => 'column=product_is_free;type=integer',
         'discountType' => 'column=products_discount_type;type=integer',
@@ -517,7 +517,7 @@ array(
     'orders_products_download' => array(
         'id' => 'column=orders_products_download_id;type=integer;key=true;auto=true',
         'orderId' => 'column=orders_id;type=integer',
-        'orderProductId' => 'column=orders_products_id;type=integer',
+        'orderItemId' => 'column=orders_products_id;type=integer',
         'filename' => 'column=orders_products_filename;type=string',
         'maxDays' => 'column=download_maxdays;type=integer',
         'downloadCount' => 'column=download_count;type=integer',
